Fixed some patterns and formats on the swagger file Added static responses on  handlers
